<?xml version="1.0"?>
<package>
  <name>pointcloud_process</name>
  <version>0.0.0</version>
  <description>pointcloud processing using semantic segmentation</description>
  <maintainer email="sganesa3@terpmail.umd.edu">Sharmitha Ganesan</maintainer>
  <license>MIT Licence</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nodelet</build_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nodelet</run_depend>


</package>
